--- a/docs/Changelog.txt
+++ b/docs/Changelog.txt
@@ -1,4 +1,4 @@
-Ghiro-0.2 (xx/09/2014)
+Ghiro-0.2 (09/01/2015)
 
  * Added case deletion, you can now delete a case.
  * Added analysis deletion, you can now delete an analysis.
