--- a/docs/Changelog.txt
+++ b/docs/Changelog.txt
@@ -2,6 +2,7 @@ Ghiro-0.3 (TBD)
 
  * Added audit log file.
  * Added processing log file.
+ * Added auto upload of files from a directory (monitoring directory and uploading new images).
  * Added unit tests.
 
 Ghiro-0.2 (09/01/2015)
