--- a/docs/Changelog.txt
+++ b/docs/Changelog.txt
@@ -5,6 +5,7 @@ Ghiro-0.3 (TBD)
  * Added auto upload of files from a directory (monitoring directory and uploading new images).
  * Added unit tests.
  * Added API method to fetch analysis report and show case.
+ * Added support and unit tests for Python 3.
  * Renamed 'manage' app to 'system'.
 
 Ghiro-0.2 (09/01/2015)
