--- a/docs/Changelog.txt
+++ b/docs/Changelog.txt
@@ -1,3 +1,7 @@
+Ghiro-0.2.1 (27/08/2015)
+
+* Fixed pymongo release in requirements to avoid an error using pymongo 3.
+
 Ghiro-0.2 (09/01/2015)
 
  * Added case deletion, you can now delete a case.
