--- a/docs/Changelog.txt
+++ b/docs/Changelog.txt
@@ -6,6 +6,8 @@ Ghiro-0.3 (TBD)
  * Added unit tests.
  * Added API method to fetch analysis report and show case.
  * Added support and unit tests for Python 3.
+ * Added new web interface based on Bootstrap 3.
+ * Added option to force update check from command line.
  * Renamed 'manage' app to 'system'.
 
 Ghiro-0.2 (09/01/2015)
