--- a/docs/Changelog.txt
+++ b/docs/Changelog.txt
@@ -4,6 +4,7 @@ Ghiro-0.3 (TBD)
  * Added processing log file.
  * Added auto upload of files from a directory (monitoring directory and uploading new images).
  * Added unit tests.
+ * Added nude detection module using NudePy.
  * Added API method to fetch analysis report and show case.
  * Added support and unit tests for Python 3.
  * Renamed 'manage' app to 'system'.
